# pokemon-nash-study

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  opencode.json  readme-ja.md  readme.md  run_ab_tmux.sh
.claude/: settings.json
.github/: copilot-instructions.md
poke-ai3/: Cargo.toml  README.md
poke-ai3-python/: Cargo.toml  Makefile  README.md  pyproject.toml
poke-ai3-python/data/poke-ai3/: hp_grid_3b_ep200.html  hp_grid_3b_ep400.html  hp_grid_3c_ep150.html
poke-ai3-python/python/poke_ai3/: __init__.py  _native.pyi
poke-ai3-python/python/poke_ai3_train/: __init__.py  _native_freshness.py  agent.py  bradley_terry.py  diagnostics.py  encoding.py  eval_ckpt_agreement.py  eval_ckpt_vs_ckpt.py  eval_curve.py  eval_hp_grid.py  eval_hp_strategy.py  eval_vs_rule.py  infer_graph.py  inspect_matchup.py  model.py  play_gui.py  supervised.py  tables.py  train_loop.py
poke-ai3-python/python/poke_ai3_train/models/: __init__.py
poke-ai3-python/python/poke_ai3_train/models/modernbert_abs/: README.md  __init__.py  configuration_modernbert_abs.py  modeling_modernbert_abs.py
poke-ai3-python/python/poke_ai3_train/play_gui_assets/: index.html
poke-ai3-python/scripts/: anchor_sweep.py  bench_one_max.sh  bench_searchmax_sep.sh  ckpt_tournament.py  diag_fix.sh  diag_ipc.sh  diag_lk.sh  diag_perf.sh  diag_perf_both.sh  diag_perf_cg.sh  diag_perf_fp.sh  diag_root.sh  diag_seed.sh  diag_sleep_seconds.sh  diag_spin.sh  diag_two_runs.sh  export_nash_geo_web.py  export_policy_table.py  export_policy_table_mixture.py  gauntlet.py  phase1_dummy_loop.py  prof_two_runs.sh  run_3e.sh  run_ab_depth_skew.sh  run_ab_minibatch.sh  run_ab_nash_lr.sh  run_ab_nash_lr_r12.sh  run_ab_searchmax.sh  run_ab_searchmax_s6.sh  run_ab_threshold.sh  run_baseline_block5.sh  run_enemy_lookahead.sh  run_epochs5_ab.sh  run_epochs_ab.sh  run_eps_ab.sh  run_eps_ab_rep.sh  run_exploit_ab.sh  run_k_sweep.sh  run_k_sweep_block5.sh  run_nash_geo_h26.py  (+15 more)
poke-ai3-python/src/: encoded.rs  human_game.rs  lib.rs  nash_vi_back.rs  nash_vi_cache.rs  nash_vi_eval.rs  nash_vi_game.rs  nash_vi_solve.rs  nash_vi_trans.rs  policy_table.rs
poke-ai3-python/tests/: test_ckpt_tournament.py  test_encoding.py
poke-ai3-python/tests/data/: encoding_golden.json  make_golden.py
poke-ai3/src/: async_executor.rs  error.rs  game_task.rs  inference_client.rs  lib.rs  obs_encode.rs  packed.rs  root_task.rs  rule_agent.rs
poke-env-rust/: Cargo.toml  README.md
poke-env-rust/examples/: bench_concurrent.rs
poke-env-rust/src/: battle_chacha.rs  lib.rs  local_showdown.rs  lookahead.rs  nash.rs  observation.rs  oracle.rs  protocol.rs  showdown_trait.rs
poke-env-rust/tests/: parity.rs
poke-wasm/: Cargo.toml
poke-wasm/src/: lib.rs  rng.rs  view.rs
web/: app.js  (+11 more)
(+460 files in other folders)
