[package]
name = "poke-ai3"
version = "0.1.0"
edition = "2024"

[dependencies]
poke-env-rust = { path = "../poke-env-rust" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "sync", "time"] }
rand = "0.8"
rand_chacha = "0.3"
