[package]
name = "poke-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
poke-sho-rust = { path = "../poke-sho-rust" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
# ChaCha8 を直接使い、rand / getrandom を避ける (WASM で OS エントロピー不要)。
rand_chacha = "0.3"
rand_core = "0.6"
